--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </form>
 </div>
 <footer>
-        <i class="fab fa-linkedin-in"></i>
+        <i class="fab fa-linkedin-in">Telegram</i>
         <i class="fab fa-telegram-plane"></i>
         <i class="fab fa-whatsapp"></i>
 </footer>
