--- a/aboutme.html
+++ b/aboutme.html
@@ -84,7 +84,7 @@
     <form>
         <label for="email">E-mail</label>
         <input type="email" id="email" name="email">
-        <button>Submit</button>
+        <button class="rounded-pill">Submit</button>
     </form>
 </div>
 <footer>
