--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
-
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
 <header>
@@ -55,7 +56,7 @@
             <p>
                 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
             </p>
-            <button>➕ See More</button>
+            <button class=" rounded-pill ">➕ See More </button>
 
         </article><br>
         <article>
@@ -65,7 +66,7 @@
             <p>
                 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
             </p>
-            <button>➕ See More</button>
+            <button class=" rounded-pill ">➕ See More</button>
         </article>
 
         <article>
@@ -75,7 +76,7 @@
             <p>
                 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. 
             </p>
-            <button>➕ See More</button>
+            <button class=" rounded-pill ">➕ See More</button>
         </article>
     </section>
 </div>
@@ -84,11 +85,11 @@
     <h1>Newsletter and Ressource Update</h1>
     <form class="newsletter">
         <input placeholder="Enter your email" type="email" id="email" name="email">
-        <button>Submit</button>
+        <button class="rounded-pill">Submit</button>
     </form>
 </div>
 <footer>
-        <i class="fab fa-linkedin-in">Telegram</i>
+        <i class="fab fa-linkedin-in"></i>
         <i class="fab fa-telegram-plane"></i>
         <i class="fab fa-whatsapp"></i>
 </footer>
