--- a/works.html
+++ b/works.html
@@ -12,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
 </head>
 <body>
@@ -31,28 +33,38 @@
     Works !
 </h1>
 
-<div>
-    <img src="images/webdesign.png" alt="webappdesign">
-    <h2>Mobile Paiement Design </h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Curabitur vitae risus non turpis lobortis luctus.
-        Integer rhoncus lectus at aliquam fringilla.
-    </p>
-    <button>See Work...</button>
+<div class="card mb-3" style="max-width: 540px;">
+    <div class="row g-0 align-items-center">
+        <div class="col-md-4">
+            <img src="images/webdesign.png" alt="webappdesign" class="img-fluid rounded-start" >
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Mobile Paiement Design</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <button class="rounded-pill"> ➕ See Work...</button>
+            </div>
+        </div>
+    </div>
 </div>
-<br>
 
-<div>
-    <iframe width="642" height="353" src="https://www.youtube.com/embed/cKeWLY-rk6g" title="Bienvenue à Thiès" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <h2>Welcome to Thies (Marketing Pub) </h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Curabitur vitae risus non turpis lobortis luctus.
-        Integer rhoncus lectus at aliquam fringilla.
-    </p>
-    <button>See Work...</button>
+<div class="card mb-3" style="max-width: 540px;">
+    <div class="row g-0 align-items-center">
+        <div class="col-md-6">
+            <iframe  src="https://www.youtube.com/embed/cKeWLY-rk6g" title="Bienvenue à Thiès" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="col-md-6">
+            <div class="card-body">
+                <h5 class="card-title">  Welcome to Thies (Marketing Pub) </h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <button class="rounded-pill"> ➕ See Work...</button>
+            </div>
+        </div>
+    </div>
 </div>
+
+
+
 <br>
 
 <div>
