--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
     <section>
         <article>
             <img draggable="false" class="artimg" src="images/finance.png" alt="finance">
-            <h2>Financial State Automation with Excel</h2>
+            <h2>Financial State  with Excel</h2>
             <hr>
             <p>
                 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
             </p>
             <button class=" rounded-pill ">➕ See More </button>
 
-        </article><br>
+        </article>
         <article>
             <img draggable="false" class="artimg" src="images/htmlcss.png" alt="bill">
             <h2>My First Bill with HTML CSS and JS</h2>
@@ -76,7 +76,7 @@
             <p>
                 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. 
             </p>
-            <button class=" rounded-pill ">➕ See More</button>
+            <button class=" rounded-pill mb-4">➕ See More</button>
         </article>
     </section>
 </div>
