--- a/works.html
+++ b/works.html
@@ -33,8 +33,21 @@
     Works !
 </h1>
 
-<div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0 align-items-center">
+<div class="card mb-3 d-flex flex-lg-row m-5 " >
+    <div class="row g-0 align-items-center p-2">
+        <div class="col-md-4">
+            <img src="images/webdesign.png" alt="webappdesign" class="img-fluid rounded-start" >
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h5 class="card-title">Mobile Paiement Design</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <button class="rounded-pill"> ➕ See Work...</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="row g-0 align-items-center p-2">
         <div class="col-md-4">
             <img src="images/webdesign.png" alt="webappdesign" class="img-fluid rounded-start" >
         </div>
@@ -48,12 +61,16 @@
     </div>
 </div>
 
-<div class="card mb-3" style="max-width: 540px;">
+<div class="card mb-3 h-auto m-5 " >
     <div class="row g-0 align-items-center">
         <div class="col-md-6">
-            <iframe  src="https://www.youtube.com/embed/cKeWLY-rk6g" title="Bienvenue à Thiès" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <object data="https://www.youtube.com/embed/cKeWLY-rk6g"
+                    width="550"
+                    height="400"
+                    type="text/html">
+            </object>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 ml-4">
             <div class="card-body">
                 <h5 class="card-title">  Welcome to Thies (Marketing Pub) </h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
