--- a/works.html
+++ b/works.html
@@ -83,12 +83,35 @@
 </div>
 
 
+<div class="card mb-3 h-auto m-5 " >
+    <div class="row g-0 align-items-center">
+
+        <div class="col-md-6 ml-4">
+            <div class="card-body">
+                <h5 class="card-title">  Chroflix Design </h5>
+                <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Curabitur vitae risus non turpis lobortis luctus.
+                    Integer rhoncus lectus at aliquam fringilla.</p>
+                <button class="rounded-pill"> ➕ See Work...</button>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <object data="https://docs.google.com/presentation/d/e/2PACX-1vTFFLja-TXWBSFoiCp0I4FMRRZZqZqmJ7oq9soLzn-a47BwOgY5AX50TEcrilMzf44V6-7Heqt2wBkg/embed?start=true&loop=true&delayms=3000"
+                    width="600"
+                    height="500"
+                    type="text/html">
+            </object>
+        </div>
+    </div>
+</div>
+
+
 
 <br>
 
 <div>
     <img src="" alt="webappdesign">
-    <h2>Chroflix Design </h2>
+    <h2> </h2>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         Curabitur vitae risus non turpis lobortis luctus.
@@ -117,11 +140,7 @@
     </form>
 </div>
 
-<object data="https://docs.google.com/presentation/d/e/2PACX-1vTFFLja-TXWBSFoiCp0I4FMRRZZqZqmJ7oq9soLzn-a47BwOgY5AX50TEcrilMzf44V6-7Heqt2wBkg/embed?start=true&loop=true&delayms=3000"
-        width="600"
-        height="500"
-        type="text/html">
-</object>
+
 
 <object data="https://docs.google.com/presentation/d/e/2PACX-1vTV9NvZpB4TzJJDZYN3tN7XLy7zNe8auqx0w4J9mfk-v_w7ZQ_VJuzU0HtkqJV8hfKSoV1HU60NMoTz/embed?start=false&loop=false&delayms=60000"
         width="600"
