--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!Doctype html>
 <html lang="en">
+
 <head>
     <title>Magath NAEL</title>
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
@@ -16,83 +17,94 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
     <!-- CSS only -->
 </head>
+
 <body>
-<header>
-    <nav >
-        <img draggable="false" class="logomansa" src="images/mansalogo.png" alt="Logo de Mansa">
-        <ul>
-            <li class="navli" ><a href="index.html">Home</a></li>
-            <li class="navli" ><a href="works.html">Works</a></li>
-            <li class="navli" ><a href="resource.html">Resources</a></li>
-            <li class="navli" ><a href="aboutme.html">About Me</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <nav>
+            <img draggable="false" class="logomansa" src="images/mansalogo.png" alt="Logo de Mansa">
+            <ul>
+                <li class="navli"><a href="index.html">Home</a></li>
+                <li class="navli"><a href="works.html">Works</a></li>
+                <li class="navli"><a href="resource.html">Resources</a></li>
+                <li class="navli"><a href="aboutme.html">About Me</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<div class="welcome">
-    <section class="welcomel">
-        <section>
-            <h2>Here is a place of sharing !</h2>
-            <p>
-                In this place i want to share knowledge. I am passionate on technology
-                and how they can help to better solve business and finance issues.
-                That's the reason behind this page in which i will takk about me and what i do.
-                Also frequently upload ressources on Tech, business and finance. I hope you will enjoy !
-            </p>
-            <p>Magath NAEL</p>
+    <div class="welcome">
+        <section class="welcomel">
+            <section>
+                <h2>Here is a place of sharing !</h2>
+                <p>
+                    In this place i want to share knowledge. I am passionate on technology
+                    and how they can help to better solve business and finance issues.
+                    That's the reason behind this page in which i will takk about me and what i do.
+                    Also frequently upload ressources on Tech, business and finance. I hope you will enjoy !
+                </p>
+                <p style="text-align: right;">Magath NAEL</p>
+            </section>
+            <img draggable="false" class="mansaimg" src="images/mansa.jpeg" alt="Image de Mansa">
+
         </section>
-        <img draggable="false" class="mansaimg" src="images/mansa.jpeg" alt="Image de Mansa">
 
-    </section>
-
-</div>
-
-<div class="recent">
+    </div>
     <h1>Recents </h1>
-    <section>
-        <article>
-            <img draggable="false" class="artimg" src="images/finance.png" alt="finance">
-            <h2>Financial State  with Excel</h2>
-            <hr>
-            <p>
-                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
-            </p>
-            <button class=" rounded-pill ">➕ See More </button>
 
-        </article>
-        <article>
-            <img draggable="false" class="artimg" src="images/htmlcss.png" alt="bill">
-            <h2>My First Bill with HTML CSS and JS</h2>
-            <hr>
-            <p>
-                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
-            </p>
-            <button class=" rounded-pill ">➕ See More</button>
-        </article>
+    <div class="recent">
+        <section>
+            <article>
+                <img draggable="false" class="artimg" src="images/finance.png" alt="finance">
+                <h2>Financial State with Excel</h2>
+                <hr>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters, as opposed to using 'Content here, content here', making it look like
+                    readable English.
+                </p>
+                <button class=" rounded-pill ">➕ See More </button>
 
-        <article>
-            <img draggable="false" class="artimg" src="images/htmlcss.png" alt="bill">
-            <h2>My First Bill with HTML CSS and JS</h2>
-            <hr>
-            <p>
-                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. 
-            </p>
-            <button class=" rounded-pill mb-4">➕ See More</button>
-        </article>
-    </section>
-</div>
+            </article>
+            <article>
+                <img draggable="false" class="artimg" src="images/htmlcss.png" alt="bill">
+                <h2>My First Bill with HTML CSS and JS</h2>
+                <hr>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters, as opposed to using 'Content here, content here', making it look like
+                    readable English.
+                </p>
+                <button class=" rounded-pill ">➕ See More</button>
+            </article>
 
-<div>
-    <h1>Newsletter and Ressource Update</h1>
-    <form class="newsletter">
-        <input placeholder="Enter your email" type="email" id="email" name="email">
-        <button class="rounded-pill">Submit</button>
-    </form>
-</div>
-<footer>
+            <article>
+                <img draggable="false" class="artimg" src="images/htmlcss.png" alt="bill">
+                <h2>My First Bill with HTML CSS and JS</h2>
+                <hr>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters, as opposed to using 'Content here, content here', making it look like
+                    readable English.
+                </p>
+                <button class=" rounded-pill mb-4">➕ See More</button>
+            </article>
+        </section>
+    </div>
+
+    <div>
+        <h1>Newsletter and Ressource Update</h1>
+        <form class="newsletter">
+            <input placeholder="Enter your email" type="email" id="email" name="email">
+            <button class="rounded-pill">Submit</button>
+        </form>
+    </div>
+    <footer>
         <i class="fab fa-linkedin-in"></i>
         <i class="fab fa-telegram-plane"></i>
         <i class="fab fa-whatsapp"></i>
-</footer>
+    </footer>
 </body>
+
 </html>
