--- a/works.html
+++ b/works.html
@@ -31,10 +31,22 @@
     
 </header>
 
-<h1>
-    Works !
-</h1>
+<div class="work">
+    <section class="workel">
+        <section>
+            <h2>Here is a place of sharing !</h2>
+            <p>
+                In this place i want to share knowledge. I am passionate on technology
+                and how they can help to better solve business and finance issues.
+                That's the reason behind this page in which i will takk about me and what i do.
+                Also frequently upload ressources on Tech, business and finance. I hope you will enjoy !
+            </p>
+            <p style="text-align: right;">Magath NAEL</p>
+        </section>
 
+    </section>
+
+</div>
 <div class="card mb-3 d-flex flex-lg-row m-5 " >
     <div class="row g-0 align-items-center p-2">
         <div class="col-md-4">
