--- a/aboutme.html
+++ b/aboutme.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
 </head>
 <body>
@@ -21,18 +24,15 @@
         <ul>
             <li class="navli" ><a href="index.html">Home</a></li>
             <li class="navli" ><a href="works.html">Works</a></li>
-            <li class="navli" ><a href="resource.html">Resources</a></li>
             <li class="navli" ><a href="aboutme.html">About Me</a></li>
         </ul>
     </nav>
 </header>
 
-<h1>
-    About me
-</h1>
-<div>
-    <h1>Bio </h1>
-    <p>I began my studies in high school in quantitative techniques of economy and management.
+<div class="biomansa">
+    <section class="bioel">
+        <h1>Bio </h1>
+        <p>I began my studies in high school in quantitative techniques of economy and management.
         However, I have always been passionate about computers and this is what allowed me to join a university course in
         Computerized Management of Organizations. It's not easy as a high school or new university student to have the chance
         to have the chance to be accompanied step by step in the field where you want to evolve. I had to
@@ -41,8 +41,12 @@
         Today, as a passionate of computer science especially applied to management, I am very proud to share my knowledge.
         I am very proud to share my knowledge. Each course I teach has a very interactive teaching style
         teaching style and is adapted according to the level of the students.
-    </p>
+        </p>
+
+    </section>
+
 </div>
+
 
 <div>
     <h1>Education</h1>
@@ -79,11 +83,13 @@
 <iframe src="docs/MagathNAEL.pdf" width="100%" height="500px">
 </iframe>
 
+
+<p class="he1">Newsletter and Ressource Update</p>
+
+
 <div>
-    <h1>News letter and Ressource Update</h1>
-    <form>
-        <label for="email">E-mail</label>
-        <input type="email" id="email" name="email">
+    <form class="newsletter">
+        <input placeholder="Enter your email" type="email" id="email" name="email">
         <button class="rounded-pill">Submit</button>
     </form>
 </div>
