--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
             <ul>
                 <li class="navli"><a href="index.html">Home</a></li>
                 <li class="navli"><a href="works.html">Works</a></li>
-                <li class="navli"><a href="resource.html">Resources</a></li>
                 <li class="navli"><a href="aboutme.html">About Me</a></li>
             </ul>
         </nav>
@@ -93,8 +92,9 @@
         </section>
     </div>
 
+    <p>Newsletter and Ressource Update</p>
+
     <div>
-        <h1>Newsletter and Ressource Update</h1>
         <form class="newsletter">
             <input placeholder="Enter your email" type="email" id="email" name="email">
             <button class="rounded-pill">Submit</button>
