--- a/works.html
+++ b/works.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Works</title>
@@ -13,157 +14,132 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300&display=swap" rel="stylesheet">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
 </head>
+
 <body>
-<header>
-    <nav>
-        <img class="logomansa" src="images/mansalogo.png" alt="Logo de Mansa">
-        <ul>
-            <li class="navli" ><a href="index.html">Home</a></li>
-            <li class="navli" ><a href="works.html">Works</a></li>
-            <li class="navli" ><a href="resource.html">Resources</a></li>
-            <li class="navli" ><a href="aboutme.html">About Me</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <img class="logomansa" src="images/mansalogo.png" alt="Logo de Mansa">
+            <ul>
+                <li class="navli"><a href="index.html">Home</a></li>
+                <li class="navli"><a href="works.html">Works</a></li>
+                <li class="navli"><a href="aboutme.html">About Me</a></li>
+            </ul>
+        </nav>
 
-    
-</header>
 
-<div class="work">
-    <section class="workel">
-        <section>
-            <h2>Here is a place of sharing !</h2>
-            <p>
-                In this place i want to share knowledge. I am passionate on technology
-                and how they can help to better solve business and finance issues.
-                That's the reason behind this page in which i will takk about me and what i do.
-                Also frequently upload ressources on Tech, business and finance. I hope you will enjoy !
-            </p>
-            <p style="text-align: right;">Magath NAEL</p>
+    </header>
+
+    <div class="work">
+        <section class="workel">
+            <section>
+                <h2>Just love what you do !</h2>
+                <p>
+                    <q>Your work is going to fill a large part of your life, and the only way to be truly satisfied is
+                        to do what you believe is great work. And the only way to do great work is to love what you do.
+                        If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart,
+                        you'll know when you find it</q>
+                </p>
+                <p>Steve Jobs</p>
+            </section>
+
         </section>
 
-    </section>
-
-</div>
-<div class="card mb-3 d-flex flex-lg-row m-5 " >
-    <div class="row g-0 align-items-center p-2">
-        <div class="col-md-4">
-            <img src="images/webdesign.png" alt="webappdesign" class="img-fluid rounded-start" >
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title">Mobile Paiement Design</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <button class="rounded-pill"> ➕ See Work...</button>
-            </div>
-        </div>
     </div>
 
-    <div class="row g-0 align-items-center p-2">
-        <div class="col-md-4">
-            <img src="images/webdesign.png" alt="webappdesign" class="img-fluid rounded-start" >
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <h5 class="card-title">Mobile Paiement Design</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <button class="rounded-pill"> ➕ See Work...</button>
+    <div class="designwork">
+        <div class="card mt-5 mb-3 d-flex flex-lg-row m-5 bg-light bg-gradient bg-opacity-50">
+            <div class="row g-0 align-items-center p-2 ">
+                <div class="col-md-4">
+                    <img src="images/webdesign.png" alt="webappdesign" class="img-fluid rounded-start">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Mobile Paiement Design</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <button class="rounded-pill"> ➕ See Work...</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-0 align-items-center p-2">
+                <div class="col-md-4">
+                    <img src="images/webdesign.png" alt="webappdesign" class="img-fluid rounded-start">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">Mobile Paiement Design</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <button class="rounded-pill"> ➕ See Work...</button>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
 
-<div class="card mb-3 h-auto m-5 " >
-    <div class="row g-0 align-items-center">
-        <div class="col-md-6">
-            <object data="https://www.youtube.com/embed/cKeWLY-rk6g"
-                    width="550"
-                    height="400"
-                    type="text/html">
-            </object>
-        </div>
-        <div class="col-md-6 ml-4">
-            <div class="card-body">
-                <h5 class="card-title">  Welcome to Thies (Marketing Pub) </h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <button class="rounded-pill"> ➕ See Work...</button>
+        <div class="card mb-3 h-auto m-5 bg-light bg-gradient bg-opacity-50 rounded-pill ">
+            <div class="row g-0 align-items-center">
+                <div class="col-md-6">
+                    <object data="https://www.youtube.com/embed/cKeWLY-rk6g" width="550" height="400" type="text/html">
+                    </object>
+                </div>
+                <div class="col-md-6 ml-4">
+                    <div class="card-body">
+                        <h5 class="card-title"> Welcome to Thies (Marketing Pub) </h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                            additional content. This content is a little bit longer.</p>
+                        <button class="rounded-pill"> ➕ See Work...</button>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
 
 
-<div class="card mb-3 h-auto m-5 " >
-    <div class="row g-0 align-items-center">
+        <div class="card mb-3 h-auto m-5  bg-light bg-gradient bg-opacity-50 rounded-pill">
+            <div class="row g-0 align-items-center">
 
-        <div class="col-md-6 ml-4">
-            <div class="card-body">
-                <h5 class="card-title">  Chroflix Design </h5>
-                <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Curabitur vitae risus non turpis lobortis luctus.
-                    Integer rhoncus lectus at aliquam fringilla.</p>
-                <button class="rounded-pill"> ➕ See Work...</button>
+                <div class="col-md-6 ml-4">
+                    <div class="card-body">
+                        <h5 class="card-title"> Chroflix Design </h5>
+                        <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Curabitur vitae risus non turpis lobortis luctus.
+                            Integer rhoncus lectus at aliquam fringilla.</p>
+                        <button class="rounded-pill"> ➕ See Work...</button>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <object
+                        data="https://docs.google.com/presentation/d/e/2PACX-1vTFFLja-TXWBSFoiCp0I4FMRRZZqZqmJ7oq9soLzn-a47BwOgY5AX50TEcrilMzf44V6-7Heqt2wBkg/embed?start=true&loop=true&delayms=3000"
+                        width="550" height="400" type="text/html">
+                    </object>
+                </div>
             </div>
         </div>
-        <div class="col-md-6">
-            <object data="https://docs.google.com/presentation/d/e/2PACX-1vTFFLja-TXWBSFoiCp0I4FMRRZZqZqmJ7oq9soLzn-a47BwOgY5AX50TEcrilMzf44V6-7Heqt2wBkg/embed?start=true&loop=true&delayms=3000"
-                    width="600"
-                    height="500"
-                    type="text/html">
-            </object>
-        </div>
+
+
     </div>
-</div>
 
 
 
-<br>
+    <p class="he1">Newsletter and Ressource Update</p>
 
-<div>
-    <img src="" alt="webappdesign">
-    <h2> </h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Curabitur vitae risus non turpis lobortis luctus.
-        Integer rhoncus lectus at aliquam fringilla.
-    </p>
-    <button>See Work...</button>
-</div>
-<br>
-
-<div>
-    <img src="" alt="webappdesign">
-    <h2>HR Management with VBA Excel </h2>
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Curabitur vitae risus non turpis lobortis luctus.
-        Integer rhoncus lectus at aliquam fringilla.
-    </p>
-    <button>See Work...</button>
-</div>
-<div>
-    <h1>News letter and Ressource Update</h1>
-    <form>
-        <label for="email">E-mail</label>
-        <input type="email" id="email" name="email">
-        <button>Submit</button>
-    </form>
-</div>
+    <div>
+        <form class="newsletter">
+            <input placeholder="Enter your email" type="email" id="email" name="email">
+            <button class="rounded-pill">Submit</button>
+        </form>
+    </div>
 
 
-
-<object data="https://docs.google.com/presentation/d/e/2PACX-1vTV9NvZpB4TzJJDZYN3tN7XLy7zNe8auqx0w4J9mfk-v_w7ZQ_VJuzU0HtkqJV8hfKSoV1HU60NMoTz/embed?start=false&loop=false&delayms=60000"
-        width="600"
-        height="500"
-        type="text/html">
-</object>
-
-<footer>
-    <i class="fab fa-linkedin-in"></i>
-    <i class="fab fa-telegram-plane"></i>
-    <i class="fab fa-whatsapp"></i>
-</footer>
+    <footer>
+        <i class="fab fa-linkedin-in"></i>
+        <i class="fab fa-telegram-plane"></i>
+        <i class="fab fa-whatsapp"></i>
+    </footer>
 </body>
+
 </html>
