--- a/aboutme.html
+++ b/aboutme.html
@@ -47,9 +47,10 @@
 
 </div>
 
+<p class="he1">Education</p>
 
-<div>
-    <h1>Education</h1>
+<div class="aboutme">
+
     <ul>
         <hr>
         <li>
@@ -80,12 +81,11 @@
     </ul>
 </div>
 
-<iframe src="docs/MagathNAEL.pdf" width="100%" height="500px">
+<iframe style="margin: 60px; text-align: center" src="docs/MagathNAEL.pdf" width="90%" height="800px">
 </iframe>
 
 
 <p class="he1">Newsletter and Ressource Update</p>
-
 
 <div>
     <form class="newsletter">
