--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
 
     </div>
-    <h1>Recents </h1>
+    <p class="he1"> Recents </p>
 
     <div class="recent">
         <section>
@@ -92,7 +92,7 @@
         </section>
     </div>
 
-    <p>Newsletter and Ressource Update</p>
+    <p class="he1">Newsletter and Ressource Update</p>
 
     <div>
         <form class="newsletter">
